; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/rc/extr_ene_ir.c_ene_set_clear_reg_mask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/rc/extr_ene_ir.c_ene_set_clear_reg_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ene_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ene_device*, i32, i32, i32)* @ene_set_clear_reg_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ene_set_clear_reg_mask(%struct.ene_device* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.ene_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ene_device* %0, %struct.ene_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %4
  %12 = load %struct.ene_device*, %struct.ene_device** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @ene_set_reg_mask(%struct.ene_device* %12, i32 %13, i32 %14)
  br label %21

16:                                               ; preds = %4
  %17 = load %struct.ene_device*, %struct.ene_device** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @ene_clear_reg_mask(%struct.ene_device* %17, i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %16, %11
  ret void
}

declare dso_local i32 @ene_set_reg_mask(%struct.ene_device*, i32, i32) #1

declare dso_local i32 @ene_clear_reg_mask(%struct.ene_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
